.......P.. [ZBX-3817] improved performance of the "data sender" process (Sasha)
.......PS. [ZBX-5436] added support of AllowRoot paramater by server and proxy daemons (Sasha)
..F....... [ZBX-5180] maintenance periods form redesign (Vedmak)
.......PS. [ZBXNEXT-1335] pingers work without connection to a database (Sasha)
..F....... [ZBX-5127] regular expressions form redesign (Vedmak)

Bug fixes:
A......... [ZBX-5706] fixed trigger.adddependencies returning an object instead of an array of trigger IDs (Pavels)
A......... [ZBX-5916] removed the unnecessary dhostids parameter from dcheck.get (Pavels)
A......... [ZBX-5719] fixed event.get returning only trigger events by default for admin users (Pavels)
A......... [ZBX-6054] fixed host write permissions being required to view screens (dotneft, Pavels)
A......... [ZBX-5915] fixed the host.get and template.get selectParentTemplates parameter using an incorrect property name when passing count (Pavels)
A......... [DEV-524] fixed the ability to override LDAP configuration when calling user.login (Pavels)
..F....... [ZBX-6049] fixed "Undefined index" in Web scenario steps (Oleg)
....I..... [ZBX-5938] removed orphaned trigger from default data set (Alexei)
.......PS. [ZBX-3379] added SourceIP support for SNMP items (dimir)
A......... [ZBXNEXT-1491] fixed alert.get hostids and groupids parameters (Pavels)
A......... [ZBXNEXT-1491] fixed multiple subselects returning hashes instead of arrays (Pavels)
A......... [ZBXNEXT-1491] fixed item.get selectHosts returning double template objects (Pavels)
A......... [ZBXNEXT-1491] fixed itemprototype.get selectItems not returning web items (Pavels)
A......... [ZBXNEXT-1491] fixed template.get selectTemplates and selectHosts not working with count (Pavels)
A......... [ZBXNEXT-1491] fixed script.get subselects not working when not requesting the groupid and host_access properties (Pavels)
..F....... [ZBX-5944] fixed expression calculation displaing (Eduard)